client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pods
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: dekcode/todo-app:v4
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client # This label should match the labels in the pod or deployment
  ports:
    - port: 80 # Port on the service
      targetPort: 80 # Port on the pod/container
