server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: dekcode/todo-api:v5
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: server-service-nodeport
spec:
  type: NodePort
  selector:
    app: server # This label should match the labels in the pod or deployment
  ports:
    - port: 80 # Port on the service
      targetPort: 80 # Port on the pod/container
      nodePort: 30002 # NodePort range is typically 30000-32767
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server # This label should match the labels in the pod or deployment
  ports:
    - port: 80 # Port on the service
      targetPort: 80 # Port on the pod/container
